kubernetes/database.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: quiz-app-mongodb
  labels:
    app: quiz-app-mongodb
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: quiz-app-mongodb
  template:
    metadata:
      labels:
        app: quiz-app-mongodb
    spec:
      containers:
      - name: quiz-app-mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-volume
          mountPath: /data/db
      volumes:
      - name: mongodb-volume
        persistentVolumeClaim:
          claimName: mongodb-volume-claim

# Create the configmap thats holding the environment variable
---
apiVersion: v1
kind: Service
metadata: 
  name: quiz-app-mongodb-service
spec:
  selector: 
    app: quiz-app-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
